Generate update transaction hand.
