# pkg/api/transaction/service/v1/requests/update_transaction_request.pb.go
@@ -1,0 +1,135 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        (unknown)
+// source: transaction/service/v1/requests/update_transaction_request.proto
+
+package requests
+
+import (
+	v1 "github.com/LexBokun/transaction-service/pkg/api/enums/transactionstatus/v1"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// Внутренний метод обновления статуса транзакции
+type UpdateRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`                                                 // Id транзакции
+	Status        v1.Status              `protobuf:"varint,2,opt,name=status,proto3,enum=enums.transactionstatus.v1.Status" json:"status,omitempty"` // Статус транзакции
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *UpdateRequest) Reset() {
+	*x = UpdateRequest{}
+	mi := &file_transaction_service_v1_requests_update_transaction_request_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *UpdateRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateRequest) ProtoMessage() {}
+
+func (x *UpdateRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_transaction_service_v1_requests_update_transaction_request_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateRequest.ProtoReflect.Descriptor instead.
+func (*UpdateRequest) Descriptor() ([]byte, []int) {
+	return file_transaction_service_v1_requests_update_transaction_request_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *UpdateRequest) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *UpdateRequest) GetStatus() v1.Status {
+	if x != nil {
+		return x.Status
+	}
+	return v1.Status(0)
+}
+
+var File_transaction_service_v1_requests_update_transaction_request_proto protoreflect.FileDescriptor
+
+const file_transaction_service_v1_requests_update_transaction_request_proto_rawDesc = "" +
+	"\n" +
+	"@transaction/service/v1/requests/update_transaction_request.proto\x12\x1ftransaction.service.v1.requests\x1a3enums/transactionstatus/v1/transaction_status.proto\"[\n" +
+	"\rUpdateRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\x12:\n" +
+	"\x06status\x18\x02 \x01(\x0e2\".enums.transactionstatus.v1.StatusR\x06statusBQZOgithub.com/LexBokun/transaction-service/pkg/api/transaction/service/v1/requestsb\x06proto3"
+
+var (
+	file_transaction_service_v1_requests_update_transaction_request_proto_rawDescOnce sync.Once
+	file_transaction_service_v1_requests_update_transaction_request_proto_rawDescData []byte
+)
+
+func file_transaction_service_v1_requests_update_transaction_request_proto_rawDescGZIP() []byte {
+	file_transaction_service_v1_requests_update_transaction_request_proto_rawDescOnce.Do(func() {
+		file_transaction_service_v1_requests_update_transaction_request_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_transaction_service_v1_requests_update_transaction_request_proto_rawDesc), len(file_transaction_service_v1_requests_update_transaction_request_proto_rawDesc)))
+	})
+	return file_transaction_service_v1_requests_update_transaction_request_proto_rawDescData
+}
+
+var file_transaction_service_v1_requests_update_transaction_request_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_transaction_service_v1_requests_update_transaction_request_proto_goTypes = []any{
+	(*UpdateRequest)(nil), // 0: transaction.service.v1.requests.UpdateRequest
+	(v1.Status)(0),        // 1: enums.transactionstatus.v1.Status
+}
+var file_transaction_service_v1_requests_update_transaction_request_proto_depIdxs = []int32{
+	1, // 0: transaction.service.v1.requests.UpdateRequest.status:type_name -> enums.transactionstatus.v1.Status
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_transaction_service_v1_requests_update_transaction_request_proto_init() }
+func file_transaction_service_v1_requests_update_transaction_request_proto_init() {
+	if File_transaction_service_v1_requests_update_transaction_request_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_transaction_service_v1_requests_update_transaction_request_proto_rawDesc), len(file_transaction_service_v1_requests_update_transaction_request_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_transaction_service_v1_requests_update_transaction_request_proto_goTypes,
+		DependencyIndexes: file_transaction_service_v1_requests_update_transaction_request_proto_depIdxs,
+		MessageInfos:      file_transaction_service_v1_requests_update_transaction_request_proto_msgTypes,
+	}.Build()
+	File_transaction_service_v1_requests_update_transaction_request_proto = out.File
+	file_transaction_service_v1_requests_update_transaction_request_proto_goTypes = nil
+	file_transaction_service_v1_requests_update_transaction_request_proto_depIdxs = nil
+}
