# pkg/api/transaction/service/v1/responses/update_transaction_response.pb.go
@@ -1,0 +1,113 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        (unknown)
+// source: transaction/service/v1/responses/update_transaction_response.proto
+
+package responses
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type UpdateResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *UpdateResponse) Reset() {
+	*x = UpdateResponse{}
+	mi := &file_transaction_service_v1_responses_update_transaction_response_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *UpdateResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateResponse) ProtoMessage() {}
+
+func (x *UpdateResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_transaction_service_v1_responses_update_transaction_response_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateResponse.ProtoReflect.Descriptor instead.
+func (*UpdateResponse) Descriptor() ([]byte, []int) {
+	return file_transaction_service_v1_responses_update_transaction_response_proto_rawDescGZIP(), []int{0}
+}
+
+var File_transaction_service_v1_responses_update_transaction_response_proto protoreflect.FileDescriptor
+
+const file_transaction_service_v1_responses_update_transaction_response_proto_rawDesc = "" +
+	"\n" +
+	"Btransaction/service/v1/responses/update_transaction_response.proto\x12 transaction.service.v1.responses\"\x10\n" +
+	"\x0eUpdateResponseBRZPgithub.com/LexBokun/transaction-service/pkg/api/transaction/service/v1/responsesb\x06proto3"
+
+var (
+	file_transaction_service_v1_responses_update_transaction_response_proto_rawDescOnce sync.Once
+	file_transaction_service_v1_responses_update_transaction_response_proto_rawDescData []byte
+)
+
+func file_transaction_service_v1_responses_update_transaction_response_proto_rawDescGZIP() []byte {
+	file_transaction_service_v1_responses_update_transaction_response_proto_rawDescOnce.Do(func() {
+		file_transaction_service_v1_responses_update_transaction_response_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_transaction_service_v1_responses_update_transaction_response_proto_rawDesc), len(file_transaction_service_v1_responses_update_transaction_response_proto_rawDesc)))
+	})
+	return file_transaction_service_v1_responses_update_transaction_response_proto_rawDescData
+}
+
+var file_transaction_service_v1_responses_update_transaction_response_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_transaction_service_v1_responses_update_transaction_response_proto_goTypes = []any{
+	(*UpdateResponse)(nil), // 0: transaction.service.v1.responses.UpdateResponse
+}
+var file_transaction_service_v1_responses_update_transaction_response_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_transaction_service_v1_responses_update_transaction_response_proto_init() }
+func file_transaction_service_v1_responses_update_transaction_response_proto_init() {
+	if File_transaction_service_v1_responses_update_transaction_response_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_transaction_service_v1_responses_update_transaction_response_proto_rawDesc), len(file_transaction_service_v1_responses_update_transaction_response_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_transaction_service_v1_responses_update_transaction_response_proto_goTypes,
+		DependencyIndexes: file_transaction_service_v1_responses_update_transaction_response_proto_depIdxs,
+		MessageInfos:      file_transaction_service_v1_responses_update_transaction_response_proto_msgTypes,
+	}.Build()
+	File_transaction_service_v1_responses_update_transaction_response_proto = out.File
+	file_transaction_service_v1_responses_update_transaction_response_proto_goTypes = nil
+	file_transaction_service_v1_responses_update_transaction_response_proto_depIdxs = nil
+}
